static/css/main.css
/* ... */
/* The "Cool" Underline */
.cta-flow::after {
	content: '';
	position: absolute;
	width: 100%;
	height: 2px;
	bottom: -2px;
	left: 0;
	background-color: #00008B;
	transform: scaleX(0.3);
	/* Starts small and subtle */
	transform-origin: bottom left;
	transition: transform 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
	/* Slight bounce */
	transition: transform 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
	/* Slight bounce */
}



.cta-flow:hover {
	color: #4169E1;
	/* Shifts to a slightly lighter blue on hover */
}

.cta-flow:hover::after {
	transform: scaleX(1);
	/* Expands to full width on hover */
}

small,
.footnote {
	font-size: 0.8rem;
	font-style: italic;
	color: #666;
}

#interview_prep.major button {
	margin: 15px;
	padding-top: 0px;
}



article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
	display: block;
}

body {
	line-height: 1;
	height: 100%;
}

ol,
ul {
	list-style: none;
}

blockquote,
q {
	quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
	content: '';
	content: none;
}

table {
	border-collapse: collapse;
	border-spacing: 0;
}

body {
	-webkit-text-size-adjust: none;
}

mark {
	background-color: transparent;
	color: inherit;
}

input::-moz-focus-inner {
	border: 0;
	padding: 0;
}

input,
select,
textarea {
	-moz-appearance: none;
	-webkit-appearance: none;
	-ms-appearance: none;
	appearance: none;
}

/* Basic */

@-ms-viewport {
	width: device-width;
}

body {
	-ms-overflow-style: scrollbar;
}

html {
	box-sizing: border-box;
	scroll-behavior: smooth !important;
}

*,
*:before,
*:after {
	box-sizing: inherit;
}


body.is-preload *,
body.is-preload *:before,
body.is-preload *:after {
	-moz-animation: none !important;
	-webkit-animation: none !important;
	-ms-animation: none !important;
	animation: none !important;
	-moz-transition: none !important;
	-webkit-transition: none !important;
	-ms-transition: none !important;
	transition: none !important;
}

/* Type */



body,
input,
select,
textarea {
	font-family: "Plus Jakarta Sans", "Source Sans Pro", Helvetica, sans-serif;
	background-color: #023657;
	/*#87cefa*/
	font-size: 15pt;
	font-weight: 200;
	line-height: 1.30;
}

p,
strong {
	font-size: 14pt;
}



a {
	-moz-transition: color 0.2s ease, border-bottom 0.2s ease;
	-webkit-transition: color 0.2s ease, border-bottom 0.2s ease;
	-ms-transition: color 0.2s ease, border-bottom 0.2s ease;
	transition: color 0.2s ease, border-bottom 0.2s ease;
	text-decoration: none;
	border-bottom: dotted 1px;
	color: inherit;
}

a:hover {
	border-bottom-color: transparent;
}

strong {
	font-weight: 400;
	text-transform: uppercase;
}

b {
	font-weight: 400;
}

em,
i {
	font-style: italic;
}

p {
	margin: 0 0 1em 0;
}


h1,
h2,
h3,
h4,
h5,
h6 {
	font-weight: 300;
	line-height: 1.5;
	margin: 0 0 0.7em 0;
	letter-spacing: -0.025em;
}

h1 a,
h2 a,
h3 a,
h4 a,
h5 a,
h6 a {
	color: inherit;
	text-decoration: none;
}

h1 {
	font-size: 1.50em;
	text-align: center;
	font-family: 'Nanum Pen Script';

}

h2 {
	font-size: 1.1em;
}

h3 {
	font-size: 1.0em;
}

h4 {
	font-size: 0.9em;
}

h5 {
	font-size: 0.8em;
}

h6 {
	font-size: 0.7em;
}


sub {
	font-size: 0.8em;
	position: relative;
	top: 0.5em;
}

sup {
	font-size: 0.8em;
	position: relative;
	top: -0.5em;
}

blockquote {
	border-left: solid 4px;
	font-style: italic;
	margin: 0 0 2em 0;
	padding: 0.5em 0 0.5em 2em;
}

code {
	border-radius: 8px;
	border: solid 1px;
	font-family: "Courier New", monospace;
	font-size: 0.9em;
	margin: 0 0.25em;
	padding: 0.25em 0.65em;
}

pre {
	-webkit-overflow-scrolling: touch;
	font-family: "Courier New", monospace;
	font-size: 0.9em;
	margin: 0 0 2em 0;
}

pre code {
	display: block;
	line-height: 1.75;
	padding: 1em 1.5em;
	overflow-x: auto;
}

hr {
	border: 0;
	border-bottom: solid 1px;
	margin: 2em 0;
}

hr.major {
	margin: 3em 0;
}

.align-left {
	text-align: left;
}

.align-center {
	text-align: center;
}

.align-right {
	text-align: right;
}

input,
select,
textarea {
	color: #ffffff;
}

a:hover {
	color: #ffffff;
}

strong,
b {
	color: #1d3a5e;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	color: #ffffff;
}

blockquote {
	border-left-color: rgba(255, 255, 255, 0.35);
}

code {
	background: rgba(255, 255, 255, 0.075);
	border-color: rgba(255, 255, 255, 0.35);
}

hr {
	border-bottom-color: rgba(255, 255, 255, 0.35);
}


/* Button */

input[type="submit"],
input[type="reset"],
input[type="button"],
button,
.button {
	-moz-appearance: none;
	-webkit-appearance: none;
	-ms-appearance: none;
	appearance: none;
	-moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
	-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
	-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
	transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
	border-radius: 8px;
	border: 0;
	cursor: pointer;
	display: inline-block;
	font-weight: 300;
	height: 2.75em;
	line-height: 2.75em;
	min-width: 9.25em;
	padding: 0 1.5em;
	text-align: center;
	text-decoration: none;
	white-space: nowrap;
}

input[type="submit"].icon,
input[type="reset"].icon,
input[type="button"].icon,
button.icon,
.button.icon {
	padding-left: 1.35em;
}

input[type="submit"].icon:before,
input[type="reset"].icon:before,
input[type="button"].icon:before,
button.icon:before,
.button.icon:before {
	margin-right: 0.5em;
}

input[type="submit"].fit,
input[type="reset"].fit,
input[type="button"].fit,
button.fit,
.button.fit {
	width: 100%;
}

input[type="submit"].small,
input[type="reset"].small,
input[type="button"].small,
button.small,
.button.small {
	font-size: 0.8em;
}

input[type="submit"].large,
input[type="reset"].large,
input[type="button"].large,
button.large,
.button.large {
	font-size: 1.35em;
}
/* ... */

